# housing_choice

./: .env.example  .gitignore  .pre-commit-config.yaml  01_agebs.ipynb  02_accessibility.ipynb  03_scripts.ipynb  04_geofabrik.ipynb  05_choice.ipynb  05_col_stats.ipynb  05_new_col_stats.ipynb  06_biogeme.ipynb  07_clean_neighborhoods.py  07_new.ipynb  08_generate_neighborhood_features.py  08_marimo_test.py  09_generate_neighborhood_features.py  09_marimo_biogeme.html  09_marimo_biogeme.py  10_find_spatial_hotspots.py  10_modelling.py  README.md  data.dvc  georeference.ipynb  ihahwz.geojson  pyproject.toml
.dvc/: config
docs/: README.md  data-lineage.md  glossary.md  model-methodology.md  neighborhood-feature-dictionary.md  reproducing-artifacts.md
notebooks/: 05_clean_neighborhoods.py  10_cluster_statistics.py  15_generate_neighborhood_features.py  20_modelling.py  99_toy_model.py  baseline.py  job_extensions.py  missing_neighborhood_features.py  spatial_extensions.py
scripts/: 01_registro.sql  02_clientes.sql  03_joined.sql  04_counts.sql  generate_doc_tables.py
src/housing_choice/: definitions.py  funcs.py  sector_clusters.py
src/housing_choice/defs/: resources.py
src/housing_choice/defs/assets/: transactions.py
src/housing_choice/modeling/: __init__.py  _utils.py  availability.py  choice_data.py  diagnostics.py  estimation.py  features.py  job_groups.py  scenarios.py  spatial_features.py  specs.py
tests/: test_modeling.py  test_sector_clusters.py
