[project]
name = "housing-choice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biogeme>=3.3.2",
    "contextily>=1.7.0",
    "cython>=3.2.4",
    "cythonbiogeme>=1.0.4",
    "duckdb>=1.4.4",
    "geopandas>=1.1.2",
    "ipykernel<7",
    "lyra-api",
    "matplotlib>=3.10.8",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "osmium>=4.3.1",
    "osmnx>=2.1.0",
    "pandana>=0.7",
    "pandas<3",
    "pandas-stubs>=3.0.0.260204",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.47",
    "types-geopandas>=1.1.3.20260408",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb"]

[tool.uv.sources]
lyra-api = { git = "https://github.com/RodolfoFigueroa/lyra-api" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
